--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               <span class="typedText">Muhammad Apta Farrel Ananto</span>
             </div>
             <div class="text-info">
-              <p>Web Developer</p>
+              <p></p>
             </div>
             <div class="text-btn">
               <button class="btn">
@@ -157,6 +157,20 @@
         <section class="section" id="certificate">
           <div class="top-header">
             <h1>My Certificate</h1>
+          </div>
+          <div class="certificate-container">
+            <div class="certificate-box">
+              <h3>Ticketing</h3>
+              <i>test</i>
+            </div>
+            <div class="certificate-box">
+              <h3>Salary Calculation</h3>
+              <i>test</i>
+            </div>
+            <div class="certificate-box">
+              <h3>Motrix.id</h3>
+              <i>test</i>
+            </div>
           </div>
         </section>
 
