--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="cache-control" content="no-cache" />
+    <meta http-equiv="expires" content="0" />
+    <meta http-equiv="pragma" content="no-cache" />
     <title>Portfolio</title>
     <link
       rel="stylesheet"
@@ -29,10 +32,6 @@
             </li>
             <li class="nav_list">
               <a href="#about" class="nav-link">About me</a>
-              <div class="circle"></div>
-            </li>
-            <li class="nav_list">
-              <a href="#myintern" class="nav-link">Internship</a>
               <div class="circle"></div>
             </li>
             <li class="nav_list">
@@ -146,13 +145,6 @@
           </div>
         </section>
 
-        <!-- My Intern -->
-        <section class="section" id="myintern">
-          <div class="top-header">
-            <h1>My Internship</h1>
-          </div>
-        </section>
-
         <!-- My Certificate -->
         <section class="section" id="certificate">
           <div class="top-header">
@@ -160,16 +152,19 @@
           </div>
           <div class="certificate-container">
             <div class="certificate-box">
-              <h3>Ticketing</h3>
-              <i>test</i>
+              <h3>Microsoft Technology Associate (MTA)</h3>
+              <p>Networking Fundamentals.</p>
+              <i>Issued 2021</i>
             </div>
             <div class="certificate-box">
-              <h3>Salary Calculation</h3>
-              <i>test</i>
+              <h3>Microsoft Technology Associate (MTA)</h3>
+              <p>Security Fundamentals.</p>
+              <i>Issued 2020</i>
             </div>
             <div class="certificate-box">
-              <h3>Motrix.id</h3>
-              <i>test</i>
+              <h3>Intern Certification</h3>
+              <p></p>
+              <i>Issued 2022</i>
             </div>
           </div>
         </section>
@@ -254,7 +249,8 @@
         <div class="middle-footer">
           <ul class="footer-menu">
             <li class="footer-menu-list"><a href="#home">Home</a></li>
-            <li class="footer-menu-list"><a href="#about">About</a></li>
+            <li class="footer-menu-list"><a href="#about">About Me</a></li>
+            <li class="footer-menu-list"><a href="#certificate">Certificate</a></li>
             <li class="footer-menu-list"><a href="#projects">Projects</a></li>
             <li class="footer-menu-list"><a href="#contact">Contact</a></li>
           </ul>
